--- a/recipes/Buniuelos.html
+++ b/recipes/Buniuelos.html
@@ -34,7 +34,9 @@
     </ol>
     <section>Secondary recipes</section>
     <heading>Other recipes</heading>
-    <img src=""
+    <img src="">
+
+    <h2>test</h2>
 
 </body>
 </html>
