Final HTML update

--- a/recipes/Buniuelos.html
+++ b/recipes/Buniuelos.html
@@ -33,10 +33,29 @@
         <li>Once finished, serve with honey on the side</li>
     </ol>
     <section>Secondary recipes</section>
-    <heading>Other recipes</heading>
-    <img src="">
+    <h1>Gallo pinto</h1>
+    <img src="https://assets.unileversolutions.com/recipes-v2/229675.jpg?imwidth=800">
+    <figcaption>This dish is eaten all over latinamerica</figcaption>
+    <h2>Description</h2>
+    <p>Easy to cook and tasty for eating. This dish is popular because it's easy to cook, 
+        ingredient are available and very tasty</p>
+        <p>There are multiple variations and every family might add their own touch. Some of the
+            most polular variations include the spicy rice and beans, which is served with spicy
+            chicken.</p>
+            <heading>Ingredients</heading>
+            <ul>
+                <li>500g of cooked rice</li>
+                <li>500g of cooked beans</li>
+                <li>50ml of oil</li>
+            </ul>
+            <heading>Steps</heading>
+            <ol>
+                <li>Mix the rice and beans into a bowl with hot oil</li>
+                <li>Cook for 5 minutes</li>
+                <li>Optional: Add spices and salt to your liking</li>
+            </ol>
 
-    <h2>test</h2>
+
 
 </body>
 </html>
