Added a bit of CSS styling

--- a/recipes/Buniuelos.html
+++ b/recipes/Buniuelos.html
@@ -54,8 +54,23 @@
                 <li>Cook for 5 minutes</li>
                 <li>Optional: Add spices and salt to your liking</li>
             </ol>
-
-
-
+    <h1>Agua dulce</h1>
+    <img src="http://4.bp.blogspot.com/-MxhtwjBa854/TzQxX2yViZI/AAAAAAAAG2k/z83G5qeGFQA/s1600/agua+dulce+%2810%29.jpg">
+        <figcaption>Very popular drink in Costa Rica</figcaption>
+        <h2>Description</h2>
+        <p>This is a drink as popular as cofee, ussually drank hot. Some people add milk, others add lemon to it.
+            Sice the drink is sweet, no sugar added is necessary.
+        </p>
+        <p>People ussually drink agua dulce in the afternoon, as part of a snack with cookies or bread.</p>
+            <heading>Ingredients</heading>
+            <ul>
+                <li>Agua dulce powder</li>
+                <li>Water</li>
+            </ul>
+            <heading>Steps</heading>
+            <ol>
+                <li>Add hot water to 1 or 2 tablespoons of powder</li>
+                <li>Enjoy</li>
+            </ol>
 </body>
 </html>
